[css] Fix related widget icon alignment. #348 #350

--- a/admin_interface/static/admin_interface/css/widgets.css
+++ b/admin_interface/static/admin_interface/css/widgets.css
@@ -39,17 +39,13 @@
 /* fixed related widget and select2 */
 /* begin fix issue #10 - Related widget broken in long tabular inline */
 .admin-interface .related-widget-wrapper {
+    display: flex;
     flex-wrap: nowrap;
     white-space: nowrap;
 }
 /* end fix */
 
 /* fix related widget links icons size and vertical alignment */
-.admin-interface .related-widget-wrapper select + .related-widget-wrapper-link,
-.admin-interface .related-widget-wrapper .select2-container + .related-widget-wrapper-link {
-    margin-left: 2px !important;
-}
-
 .admin-interface .related-widget-wrapper .related-widget-wrapper-link {
     display: flex;
     align-items: center;
